add a shortcut for lazygit in ranger

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -420,6 +420,10 @@ map <END>      move to=-1
 map <PAGEDOWN> move down=1   pages=True
 map <PAGEUP>   move up=1     pages=True
 map <CR>       move right=1
+
+# Open lazygit
+map <c-g> shell lazygit
+
 #map <DELETE>   console delete
 map <INSERT>   console touch%space
 
