--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,10 +64,10 @@ bind -n M-& join-pane -t :7
 bind -n M-* join-pane -t :8
 bind -n M-( join-pane -t :9
 
-bind u split-window -vb -c "#{pane_current_path}"
+bind h split-window -vb -c "#{pane_current_path}"
 bind j split-window -v -c "#{pane_current_path}"
 bind k split-window -hb -c "#{pane_current_path}"
-bind h split-window -h -c "#{pane_current_path}"
+bind l split-window -h -c "#{pane_current_path}"
 
 # pane navigation
 bind 1 select-pane -t:.1
