--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
-# -- general
-# set-option default-path "$PWD"
+# general
+# non-plugin options
+set -g default-terminal "tmux-256color"
 
 setw -g xterm-keys on
 set -s escape-time 0
@@ -17,94 +18,40 @@ setw -g monitor-bell off
 
 set -g history-limit 10000
 
-set-hook -g pane-focus-in "run -b 'bash ~/.config/tmux/fzf_panes.tmux update_mru_pane_ids'"
-bind -n M-w run -b 'bash ~/.config/tmux/fzf_panes.tmux new_window'
+set -g base-index 1
+set -g pane-base-index 1
+set -g renumber-windows on
 
-# create session
-bind C-c new-session
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'jimeh/tmuxifier'
 
-# window management
-bind -n M-o new-window -c "#{pane_current_path}"
-bind -n M-O break-pane
-bind -n M-Q kill-pane
+# catppuccin theme
+set -g @plugin "catppuccin/tmux"
+set -g @catppuccin_flavour "mocha"
 
-# window navigation
-unbind n
-unbind p
-unbind 1
-unbind 2
-unbind 3
-unbind 4
-unbind 5
-unbind 6
-unbind 7
-unbind 8
-unbind 9
-unbind 0
-bind -r C-p previous-window
-bind -r C-n next-window
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
 
-bind -n M-1 select-window -t 1
-bind -n M-2 select-window -t 2
-bind -n M-3 select-window -t 3
-bind -n M-4 select-window -t 4
-bind -n M-5 select-window -t 5
-bind -n M-6 select-window -t 6
-bind -n M-7 select-window -t 7
-bind -n M-8 select-window -t 8
-bind -n M-9 select-window -t 9
+# visual mode
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
-bind -n M-! join-pane -t :1
-bind -n M-@ join-pane -t :2
-bind -n 'M-#' join-pane -t :3
-bind -n 'M-$' join-pane -t :4
-bind -n M-% join-pane -t :5
-bind -n M-^ join-pane -t :6
-bind -n M-& join-pane -t :7
-bind -n M-* join-pane -t :8
-bind -n M-( join-pane -t :9
+# keymaps
+unbind C-b
+set -g prefix C-a
 
 bind h split-window -vb -c "#{pane_current_path}"
 bind j split-window -v -c "#{pane_current_path}"
 bind k split-window -hb -c "#{pane_current_path}"
 bind l split-window -h -c "#{pane_current_path}"
 
-# pane navigation
-bind 1 select-pane -t:.1
-bind 2 select-pane -t:.2
-bind 3 select-pane -t:.3
-bind 4 select-pane -t:.4
-bind 5 select-pane -t:.5
-bind 6 select-pane -t:.6
-bind 7 select-pane -t:.7
-bind 8 select-pane -t:.8
-bind 9 select-pane -t:.9
-bind 0 select-pane -t:.10
 bind -n M-h select-pane -L
 bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
-bind > swap-pane -D
-bind < swap-pane -U
-bind | swap-pane
-bind -n M-Space next-layout
-
-bind W choose-tree -Z
-bind S choose-tree 'move-pane -v -s "%%"'
-bind V choose-tree 'move-pane -h -s "%%"'
-
-# default statusbar colors
-set -g status-bg black
-#set -g status-left ' #[fg=magenta,bold]❐ #S'
-#set -g status-left '#[fg=brightyellow] #{?client_prefix,⌨ ,  }  #[fg=magenta,bold] %Y-%m-%d %H:%M '
-#set -g status-right '#(rainbarf --battery --remaining --bolt --tmux --rgb)'
-#set -g status-left "#[fg=magenta,bold] %Y-%m-%d %H:%M | #[fg=brightblue]#(curl icanhazip.com) #(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #(ifconfig en3 | grep 'inet ' | awk '{print \"en3 \" $2}') #(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
-setw -g window-status-format '#[fg=brightblue] #I #W '
-setw -g window-status-current-format '#[fg=magenta,bold] #I #W:#F'
-setw -g window-status-activity-style bg=black
-setw -g window-status-bell-style bg=black
-#set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]⮀#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]⮀"
-
-
-set-option -g status-left "#(~/.config/tmux/tmux-powerline/powerline.sh left)"
-set-option -g status-right "#(~/.config/tmux/tmux-powerline/powerline.sh right)"
