--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,7 +43,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # keymaps
 unbind C-b
-set -g prefix C-a
+set -g prefix C-q
 
 bind h split-window -vb -c "#{pane_current_path}"
 bind j split-window -v -c "#{pane_current_path}"
