--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,10 +27,10 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'jimeh/tmuxifier'
+set -g @plugin 'jimeh/tmux-themepack'
 
-# catppuccin theme
-set -g @plugin "catppuccin/tmux"
-set -g @catppuccin_flavour "mocha"
+# theme
+set -g @themepack 'powerline/double/yellow'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
