--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,6 +31,7 @@ set -g @plugin 'jimeh/tmux-themepack'
 
 # theme
 set -g @themepack 'powerline/double/yellow'
+set -g status-style "bg=#1c1c1c,fg=#ffffff"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
