--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,18 +23,21 @@ set -g pane-base-index 1
 set -g renumber-windows on
 
 # List of plugins
+set -g @plugin 'jimeh/tmux-themepack'
+set -g @plugin 'jimeh/tmuxifier'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'jimeh/tmuxifier'
-set -g @plugin 'jimeh/tmux-themepack'
 
 # theme
-set -g @themepack 'powerline/double/yellow'
-set -g status-style "bg=#1c1c1c,fg=#ffffff"
+set -g @themepack 'powerline/block/orange'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+# 覆盖背景色为您的配色方案
+set -g status-bg "#1c1c1c"
+set -g pane-border-style fg="#3e4451",bg="#1c1c1c"
+set -g pane-active-border-style fg="#ff8f40",bg="#1c1c1c"
+set -g window-style bg="#1c1c1c"
+set -g window-active-style bg="#1c1c1c"
 
 # visual mode
 set-window-option -g mode-keys vi
@@ -55,3 +58,6 @@ bind -n M-h select-pane -L
 bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
