Modify line height and add macOS configurations
Adjust line height and add macOS settings

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -10,7 +10,7 @@ font_family      Hack Nerd Font Mono
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
-adjust_line_height 130%
+adjust_line_height 120%
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. The easiest way to select fonts is to run the `kitten
@@ -2926,4 +2926,8 @@ background_blur 4
 #: }}}
 
 # macOS
+macos_option_as_alt yes
+macos_thicken_font 0.0
+macos_custom_beam_cursor yes
+macos_titlebar_color background
 macos_option_as_alt yes
