--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,6 +39,11 @@ set -g pane-active-border-style fg="#ff8f40",bg="#1c1c1c"
 set -g window-style bg="#1c1c1c"
 set -g window-active-style bg="#1c1c1c"
 
+# Undercurl
+set -g default-terminal "${TERM}"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+
 # visual mode
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
