Modify font underline position and editor settings
Updated font configuration and editor settings.

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -153,6 +153,8 @@ font_size 15.0
 #:     modify_font underline_thickness 150%
 #:     modify_font strikethrough_position 2px
 
+modify_font underline_position 1.1
+
 #: Additionally, you can modify the size of the cell in which each
 #: font glyph is rendered and the baseline at which the glyph is
 #: placed in the cell. For example::
@@ -1668,7 +1670,7 @@ background_blur 4
 #: interactive mode and reads its startup rc files. Environment
 #: variables are expanded in this setting.
 
-# editor .
+editor vim
 
 #: The terminal based text editor (such as vim or nano) to use when
 #: editing the kitty config file or similar tasks.
@@ -2199,7 +2201,7 @@ background_blur 4
 #: The full list of actions that can be mapped to key presses is
 #: available here <https://sw.kovidgoyal.net/kitty/actions/>.
 
-# kitty_mod ctrl+shift
+kitty_mod ctrl+alt
 
 #: Special modifier key alias for default shortcuts. You can change
 #: the value of this option to alter all default shortcuts that use
@@ -2931,3 +2933,4 @@ macos_thicken_font 0.0
 macos_custom_beam_cursor yes
 macos_titlebar_color background
 macos_option_as_alt yes
+underline_style curly
