--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -114,7 +114,7 @@ set preview_images true
 #   Preview images in full color with the external command "ueberzug".
 #   Images are shown by using a child window.
 #   Only for users who run X11 in GNU/Linux.
-set preview_images_method iterm2
+set preview_images_method kitty
 
 # Delay in seconds before displaying an image with the w3m method.
 # Increase it in case of experiencing display corruption.
@@ -139,7 +139,7 @@ set show_hidden_bookmarks true
 
 # Which colorscheme to use?  These colorschemes are available by default:
 # default, jungle, snow, solarized
-set colorscheme zenburn
+set colorscheme default
 
 # Preview files on the rightmost column?
 # And collapse (shrink) the last column if there is nothing to preview?
@@ -375,7 +375,6 @@ map s  console shell%space
 map r  chain draw_possible_programs; console open_with%space
 map f  console find%space
 map cd console cd%space
-map T console shell touch%space 
 
 map <C-p> chain console; eval fm.ui.console.history_move(-1)
 
@@ -421,15 +420,11 @@ map <END>      move to=-1
 map <PAGEDOWN> move down=1   pages=True
 map <PAGEUP>   move up=1     pages=True
 map <CR>       move right=1
-
-# Open Nvim
-map V console shell nvim%space 
-
-# Open lazygit
-map <c-g> shell lazygit
-
 #map <DELETE>   console delete
 map <INSERT>   console touch%space
+
+# Open Nvim
+map V console shell nvim%space
 
 # VIM-like
 copymap <UP>       k
@@ -765,7 +760,3 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
-
-# a plugin that adds file glyphs / icon support to Ranger:
-# https://github.com/alexanderjeurissen/ranger_devicons
-default_linemode devicons
